--- a/static/style/produk.css
+++ b/static/style/produk.css
@@ -27,6 +27,7 @@
     font-family: "Montserrat", sans-serif;
     width: 100%;
     order: 1; /* Judul produk paling atas */
+    margin-top:50px;
 }
 
 .product-model {
@@ -93,6 +94,7 @@ model-viewer {
     text-align: justify; /* Rata kiri-kanan untuk deskripsi utama */
     padding: 0 5px; /* Sedikit padding samping untuk teks utama */
     width: 100%; /* Ambil lebar penuh */
+    margin-top: 30px;
 }
 
 .product-spec-list {
@@ -115,6 +117,7 @@ model-viewer {
     padding-left: 20px;
     margin: 0;
     width: 100%; /* Ambil lebar penuh */
+    margin-bottom: 60px;
 }
 
 .product-spec-list ul li {
